@startuml
'https://plantuml.com/class-diagram

class ScoringSystem
{
+ ShowEnterInterface()
+ DisplayScoringClass()
+ DisplayScoringItem()

}
class ScoringClass
{
- ClassName : String

}
class ScoringItem
{
- ItemName : String
- AverageScore : Double
- TotalScorer : int
--
+ ShowItemPicture()
+ ShowComment(comment : UserComment)
+ getAverageScore(Score : UserComment) : Double
+ getTotalScorer(PeopleNumber : UserComment) : int
}
class UserComment
{
- Comment : String
- Time : String
- Score : int
--
+ addComment(WordComment : String)
+ addScore(IntNumber : int)
+ getCommentTime() : String
}
class ItemPicture
{

}
class Database
{

}

class Administer
{
- code : String

}

ScoringSystem "1" --> "0...*" ScoringClass : -class
ScoringSystem "1" --> "1" Administer
ScoringClass "1" --> "0...*" ScoringItem

ScoringItem "1" --> "0...*" UserComment : -comment
ScoringItem "1" --> "1" ItemPicture

@enduml